[package]
name = "jarl"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounded-vec-deque = "0.1.1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.2.5", features = ["derive"] }
